# rfcs

./: 0000-subgraph.md  0000-template.md
.github/workflows/: rfc-discussion.yml  sync-rfc-discussion.yml
rfcs/: ####-Core Video Nodes.md  0000-corenodes.md  0000-custom-nodes-dependencies-management.md  0000-subgraph.md  0000-variable-length-node-inputs.md  0001-object_info_v2.md  0002-litegraph_native_reroute.md  0002-widget-values-format.md  0003-litegraph_native_reroute.md  0003-widget-input-socket.md  0004-test-enhanced-discussions.md  0004-vue-component-rendering-system.md  0004-widget-input-socket.md  0005-security-policy-disallow-requests-for-code-downloads.md  0005-subgraph.md  9999-TEST-enhanced-discussion-workflow.md
rfcs/rfc-####-Core Video Nodes/: ####-Core Video Nodes.md
specifications/: README.md  api.ts  node_def.json  node_def.py
specifications/current/: api.py  node_def.py  pyproject.toml
